# MyDRFCourse

./: .env.prod  .env.sample  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: celery.py  settings.py  urls.py
habit/: models.py  paginations.py  permissions.py  serializer.py  services.py  tasks.py  urls.py  views.py
habit/migrations/: 0001_initial.py  0002_alter_habit_title.py  0002_habit_is_pleasant_habit_related_habit_and_more.py  0003_alter_habit_period_alter_habit_time.py  0004_alter_habit_is_pleasant.py  0005_alter_habit_related_habit.py  0006_alter_habit_reward.py  0007_habit_send_indicator.py
users/: permissions.py  serializer.py  tests.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_tg_chat_id.py  0003_alter_user_tg_chat_id.py
